RESOLVED FIXED63698
[Chromium] -webkit-text-stroke doesn't affect with non-zero width border property
https://bugs.webkit.org/show_bug.cgi?id=63698
Summary [Chromium] -webkit-text-stroke doesn't affect with non-zero width border prop...
Kenichi Ishibashi
Reported 2011-06-30 03:44:37 PDT
Created attachment 99270 [details] test page Open attached file to reproduce the problem. I confirmed the problem on Chromium Win and Linux.
Attachments
test page (115 bytes, text/html)
2011-06-30 03:44 PDT, Kenichi Ishibashi
no flags
test page(revised) (114 bytes, text/html)
2011-06-30 03:47 PDT, Kenichi Ishibashi
no flags
Patch V0 (11.23 KB, patch)
2011-06-30 03:54 PDT, Kenichi Ishibashi
simon.fraser: review+
Kenichi Ishibashi
Comment 1 2011-06-30 03:47:06 PDT
Created attachment 99271 [details] test page(revised) The previous one might not be good test case.
Kenichi Ishibashi
Comment 2 2011-06-30 03:54:55 PDT
Created attachment 99272 [details] Patch V0
Kenichi Ishibashi
Comment 3 2011-06-30 03:57:34 PDT
(In reply to comment #2) > Created an attachment (id=99272) [details] > Patch V0 The cause is calling graphicsContext->setStrokeStyle() without restoring the previous stroke style in RenderObject::drawLineForBoxSide(). I wonder why GraphicsContextState is not saved and restored here. We might fix this by using GraphicsContextStateSaver, but I'm not sure that is correct so I've made a patch which just saves/restores the stroke style. I'd like to hear experts advices. This will happen when HAVE(PATH_BASED_BORDER_RADIUS_DRAWINGS) is false. This explains why the problem doesn't occur on Safari and Chromium Mac. This patch doesn't contain expected files except for Chromium Linux port. I'll add them later.
Kenichi Ishibashi
Comment 4 2011-06-30 20:29:07 PDT
Note You need to log in before you can comment on or make changes to this bug.